--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,7 +4,7 @@
     body {
         font-family: "Roboto", sans-serif;
         font-size: 18px;
-        background-color:#0B0C10 ;
+        background-color:#608248 ;
     }
 </style>
 <div  class="container">
