--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,35 @@
 {% load static %}
 <html>
 <head>
-
+<style >
+    .city {
+  background-color: black;
+  color: white;
+  border: 2px solid black;
+  margin: 5px;
+  padding: 5px;
+  font-size: 120%;
+  color: red;
+}
+.row {
+  display: flex;
+}
+.item {
+  flex: 16.66%;
+  padding: 5px;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.img2 {
+  float: right;
+}
+.ct{
+  text-align: center;
+ }
+</style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,30 +80,37 @@
     </header>
 
     <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-25  col-xs-9">
           {% block content %}{% endblock %}
-        </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light"><a href="www.google.com">Latest Posts</a></li>
-                <li class="list-group-item list-group-item-light"><a href="#">Latest PostsAnnouncements</a></li>
-                <li class="list-group-item list-group-item-light"><a href="#">Calender</a></li>
-                <li class="list-group-item list-group-item-light"><a href="#">etc</a></li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
+    </div>
     </main>
-
+    <footer >
+<div class="section-space section-color">
+  <div class="container-fluid">
+    <div class="row client-logo">
+      <div class="col-md-12 section-title">
+        <h1>अन्य महत्वपूर्ण वेब साईट्स : </h1>
+      </div>
+      <div class="row">
+         <div class="item"><a href="https://www.mygov.in/"><img src="https://fcs.up.gov.in/new-web/images/logo-mygov.png" alt="logo"></a></div>
+         <div class="item"><a href="https://digitalindia.gov.in/"><img src="https://fcs.up.gov.in/new-web/images/logo-digital.png" alt="logo"></a></div>
+     
+      
+        <div class="item"><a href="https://www.makeinindia.com/"><img src="https://fcs.up.gov.in/new-web/images/logo-makeindia.png" alt="logo"></a></div>
+       
+     
+        <div class="item"><a href="https://swachhbharatmission.gov.in/"><img src="https://fcs.up.gov.in/new-web/images/logo-shwcht-bharat.png" alt="logo"></a></div>
+        <div class="item"><a href="http://up.gov.in/"><img src="https://fcs.up.gov.in/new-web/images/logo-1.png" alt="logo"></a></div>
+        <div class="item"><a href="https://www.india.gov.in/"><img src="https://fcs.up.gov.in/new-web/images/logo-2.png" alt="logo"></a></div>
+  </div>
+      </div>
+  </div>
+</div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </footer>
 </body>
 </html>
