change in user model for email update

--- a/blog/templates/blog/signup.html
+++ b/blog/templates/blog/signup.html
@@ -5,7 +5,7 @@
     {% csrf_token %}
     {% for field in form %}
       <p>
-        {{ field.label_tag }}<br>
+        {{ field.label_tag }}
         {{ field }}
         {% if field.help_text %}
           <small style="color: grey">{{ field.help_text }}</small>
